Minor fixes on styling/spacing

--- a/src/App.css
+++ b/src/App.css
@@ -18,16 +18,15 @@
 }
 
 .mainContent {
-    /* display: flex; */
-    /* justify-content: center; */
     position: relative;
-    left: -80px;
     min-width: 100%;
     height: 100%;
 }
 
 .sidebarWrapper {
-    height: calc(100vh - 200px);
+    height: 100vh;
+    position: fixed;
+    z-index: 1;
     display: flex;
     flex-direction: column-reverse;
     white-space: break-spaces;
