--- a/src/Card.css
+++ b/src/Card.css
@@ -23,7 +23,7 @@
 }
 
 .cardList {
-    padding: 20px 20px 0 100px;
+    padding: 20px 20px 100px 100px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: 200px;
