--- a/src/GenerateBar.css
+++ b/src/GenerateBar.css
@@ -11,7 +11,7 @@
     background-color: white;
     border-radius: 10px;
     border: 2px solid black;
-    padding: 0 2rem;
+    padding: 0 1.5rem;
 }
 
 .input {
