--- a/src/TopNav.css
+++ b/src/TopNav.css
@@ -51,7 +51,8 @@
 }
 
 .navItem:hover {
-    border-color: #2652f4;
+    /* border-color: #2652f4; */
+    border-color: rgb(188, 255, 255);
     /* background-color: rgb(107, 107, 107); */
 }
 
