--- a/src/TopSection.css
+++ b/src/TopSection.css
@@ -16,7 +16,8 @@
 .searchBg {
     width: 100%;
     height: 400px;
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
+    background-color: #ffc107ad
     /* background-image: url(assets/ziming-zhang-0XWOWsRdlb8-unsplash.jpg);
     background-size: cover; */
 }
@@ -40,4 +41,27 @@
 .subtitle {
     font-size: 1.5rem;
     color: dimgray;
+}
+
+
+
+.hint {
+    color: black;
+    width: 70%;
+    height: 100px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    text-align: start;
+}
+
+.link {
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
+    cursor: pointer;
+}
+.link:hover {
+    color: #535bf2;
 }
